--- a/play.html
+++ b/play.html
@@ -56,5 +56,29 @@
             
         <h5 class = "Imp">IMP</h5>
             <p class ="speech">Here comes another misery.</p>
+    <div>
+            <table>
+                <tr>
+                    <th>Character</th>
+                    <th>Actor</th>
+                    <th>UnderStudy</th>
+                </tr>
+                <tr>
+                    <td>Main lead 1</td>
+                    <td>NTR</td>
+                    <td>Yes</td>
+                </tr>
+                <tr>
+                    <td>Main lead 2</td>
+                    <td>Ram charan</td>
+                    <td>No</td>
+                </tr>
+                <tr>
+                    <td>Female Lead</td>
+                    <td>Alia</td>
+                    <td>Yes</td>
+                </tr>
+            </table>
+    </div>
     </body>
 </html>
