--- a/play.html
+++ b/play.html
@@ -5,6 +5,7 @@
             A Play
         </title>
         <link rel="stylesheet" href="gs.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         <h1>
@@ -80,6 +81,21 @@
                 </tr>
             </table>
     </div>
-    <a href="secondact.html">secondact</a>
+        <a href="secondact.html">secondact</a>
+        <br>
+    <div>
+        <br>
+        <h3>Icons</h3>
+        <i class="material-icons">traffic</i>
+        <i class="material-icons">cloud</i>
+        <br>
+        <h3>Relevant Picture</h3>
+        <img src="pic.png">
+    </div>
+    <h3> Navigation bars</h3>
+    <ul class="navbar-horizontal">
+        <li> <a href="play.html">Play</a> </li>
+        <li> <a href="secondact.html">SecondAct</a> </li>
+        </ul>
     </body>
 </html>
