--- a/secondact.html
+++ b/secondact.html
@@ -21,5 +21,12 @@
         <p class ="speech">Yes, that is his honor.</p>
 
         <a href="play.html">play</a>
+
+        <h3> Navigation bars</h3>
+
+        <ul class="navbar-horizontal">
+            <li> <a href="play.html">Play</a> </li>
+            <li> <a href="secondact.html">SecondAct</a> </li>
+            </ul>
     </body>
 </html>
